// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldError /> error field name is missing renders nothing 1`] = `<DocumentFragment />`;

exports[`<FieldError /> error is undefined renders nothing 1`] = `<DocumentFragment />`;

exports[`<FieldError /> error message is provided with a single message renders the provided message 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #FFDED9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c1 {
  box-sizing: border-box;
  margin-left: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  color: #BF2F1D;
  width: m;
  height: m;
}

.c4 {
  box-sizing: border-box;
  color: inherit;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1rem;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<div
    class="c0 "
    data-testid="error-test-input"
    display="flex"
    id="error-test-input"
    role="alert"
  >
    <svg
      color="#BF2F1D"
      fill="none"
      height="16"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6M12 17.01l.01-.011M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        color="text.critical"
        font-size="font-size-100"
        font-style="none"
        font-weight="400"
      >
        <p
          class="c4 c5"
          color="inherit"
        >
          Invalid field
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FieldError /> error message is provided with multiple messages renders all of the provided messages 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #FFDED9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c1 {
  box-sizing: border-box;
  margin-left: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  color: #BF2F1D;
  width: m;
  height: m;
}

.c4 {
  box-sizing: border-box;
  color: inherit;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1rem;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

<div
    class="c0 "
    data-testid="error-test-input"
    display="flex"
    id="error-test-input"
    role="alert"
  >
    <svg
      color="#BF2F1D"
      fill="none"
      height="16"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6M12 17.01l.01-.011M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        color="text.critical"
        font-size="font-size-100"
        font-style="none"
        font-weight="400"
      >
        <p
          class="c4 c5"
          color="inherit"
        >
          Invalid field
        </p>
      </div>
      <div
        class="c2 c3"
        color="text.critical"
        font-size="font-size-100"
        font-style="none"
        font-weight="400"
      >
        <p
          class="c4 c5"
          color="inherit"
        >
          Other error
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FieldError /> error message with markdown with a single message renders the provided message with markup 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #FFDED9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c1 {
  box-sizing: border-box;
  margin-left: 0.5rem;
}

.c2 {
  box-sizing: border-box;
  color: #BF2F1D;
  width: m;
  height: m;
}

.c4 {
  box-sizing: border-box;
  color: inherit;
}

.c3 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-style: none;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1rem;
}

.c5 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Segoe UI, Roboto,Helvetica Neue,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
}

<div
    class="c0 "
    data-testid="error-test-input"
    display="flex"
    id="error-test-input"
    role="alert"
  >
    <svg
      color="#BF2F1D"
      fill="none"
      height="16"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6M12 17.01l.01-.011M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        color="text.critical"
        font-size="font-size-100"
        font-style="none"
        font-weight="400"
      >
        <p
          class="c4 c5"
          color="inherit"
        >
          This is 
          <strong
            class="c4 c6"
            color="inherit"
            font-weight="bold"
          >
            an error
          </strong>
           with markdown
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
